algumas alterações no css do form

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -6,7 +6,7 @@ pt-BR:
 
   errors:
     messages:
-      blank: preenchimento obrigatório
+      blank: "* Campo obrigatório"
 
   time:
     formats:
